--- a/.gitignore
+++ b/.gitignore
@@ -4,34 +4,100 @@
 /node_modules
 /.pnp
 .pnp.js
+.yarn/install-state.gz
+.npm
+.yarn-integrity
 
 # testing
 /coverage
+.coverage
+*.lcov
 
 # next.js
 /.next/
 /out/
+.vercel
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # production
 /build
+/dist
+/out
+/.output
+
+# environment variables
+.env
+.env*.local
+.env.development
+.env.test
+.env.production
+*.env
+
+# debug & logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+logs
+*.log
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# IDE - IntelliJ
+.idea/
+*.iml
+*.iws
+.idea_modules/
 
 # misc
 .DS_Store
 *.pem
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# local env files
-.env*.local
-.env
-
-# vercel
-.vercel
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+*.swp
+*.swo
 
 # typescript
 *.tsbuildinfo
 next-env.d.ts
 
+# cache
+.cache/
+.eslintcache
+.stylelintcache
+.prettiercache
+*.tsbuildinfo
+
+# Optional
+/analyze
+.env.example
+*.bak
+*.tmp
+*.temp
+
+# Local SSL
+*.crt
+*.key
+*.pem
+
+# Database
+*.sqlite
+*.sqlite3
+*.db
+
+# Serverless
+.serverless/
+.dynamodb/
