--- a/package.json
+++ b/package.json
@@ -32,12 +32,16 @@
     "@radix-ui/react-toast": "^1.2.15",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@react-spring/web": "^10.0.3",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.4",
     "@vercel/blob": "^2.0.0",
     "ai": "^3.0.14",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "drizzle-kit": "^0.31.5",
     "drizzle-orm": "^0.44.7",
+    "express": "^5.1.0",
     "framer-motion": "^12.23.24",
     "geist": "^1.5.1",
     "googleapis": "^164.1.0",
