feat: add runtime test cases module for AI agents
- Implemented RuntimeTestCases class with various test cases for Node.js, package managers, CLI tools, and popular frameworks.
- Added TypeScript definitions and source maps for better type support and debugging.
- Created package.json and tsconfig.json for module configuration and build setup.
- Included test cases for Node.js processes, async handling, file operations, HTTP server, and more.
- Integrated npm, Yarn, and PNPM package management tests.
- Added tests for Vite, Next.js, shadcn-ui, React Router, Nuxt, LibSQL, and Drizzle ORM.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@codetopic/*": ["./packages/*/index.ts"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
