--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "slack-sdk": "^5.0.0",
     "stripe": "^19.1.0",
     "tailwind-merge": "^2.5.2",
+    "winston": "^3.18.3",
     "zod": "^3.25.76"
   },
   "devDependencies": {
